--- a/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b8H-M6-TeK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="b8H-M6-TeK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -25,7 +26,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nt9-1j-5pc">
-                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <rect key="frame" x="0.0" y="92" width="414" height="804"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXm-SK-Dmr">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="400"/>
@@ -48,6 +49,7 @@
                                                             <constraint firstAttribute="height" constant="31" id="XpL-nG-4Uj"/>
                                                             <constraint firstAttribute="width" constant="49" id="aaE-Je-gyN"/>
                                                         </constraints>
+                                                        <color key="onTintColor" name="Mix_Magenta"/>
                                                         <connections>
                                                             <action selector="switchDidChange:" destination="KJi-AQ-Sa0" eventType="valueChanged" id="aLi-af-28g"/>
                                                             <action selector="touchswitch:" destination="KJi-AQ-Sa0" eventType="valueChanged" id="ett-r0-eJG"/>
@@ -97,6 +99,7 @@
                                                             <constraint firstAttribute="height" constant="31" id="lXL-7z-9IN"/>
                                                             <constraint firstAttribute="width" constant="49" id="wGH-fH-13b"/>
                                                         </constraints>
+                                                        <color key="onTintColor" name="Mix_Magenta"/>
                                                         <connections>
                                                             <action selector="soundSwitchDidChange:" destination="KJi-AQ-Sa0" eventType="valueChanged" id="C4J-Wf-aPz"/>
                                                         </connections>
@@ -186,7 +189,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b8H-M6-TeK" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="6hr-ud-GBD">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="Baloo2-Bold" family="Baloo 2" pointSize="22"/>
@@ -208,6 +211,9 @@
         </namedColor>
         <namedColor name="LabelMagenta">
             <color red="0.99607843137254903" green="0.90588235294117647" blue="0.92156862745098034" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Mix_Magenta">
+            <color red="0.97647058823529409" green="0.38039215686274508" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
